# meilisearch-status-check-decorator

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: pypi_publish.yaml  testing.yaml
meilisearch_status_check_decorator/: __init__.py
tests/: test_decorator.py
