[tool.poetry]
name = "meilisearch-status-check-decorator"
version = "0.1.3"
description = "A decorator to check for indexing status errors"
authors = ["Paul Sanders <psanders1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sanders41/meilisearch-status-check-decorator"
homepage = "https://github.com/sanders41/meilisearch-status-check-decorator"
documentation = "https://github.com/sanders41/meilisearch-status-check-decorator"
keywords = ["meilisearch", "python", "decorator"]

[tool.poetry.dependencies]
python = "^3.7"
meilisearch = ">=0.16,<0.18"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["meilisearch_status_check_decorator", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=meilisearch_status_check_decorator"
